tooltip-issue-fixed; problem caused by z-index

--- a/css/chart.css
+++ b/css/chart.css
@@ -138,7 +138,7 @@ div.single-chart-container{
 
 div.charts-main-container{
 	max-width: 1260px;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 div.data-comparison-item{
